<resources>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="login_string">Войти</string>
    <string name="reg_string">Зарегистрироваться</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="comeback_text">Вернуться назад</string>
    <string name="list">Список</string>
    <string name="map">Карта</string>
    <string name="favorites">Избранное</string>
    <string name="profile">Профиль</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_enter_login">Введите логин</string>
    <string name="error_enter_password">Введите пароль</string>
    <string name="error_auth">Ошибка авторизации</string>
    <string name="error_net">Ошибка сети</string>
    <string name="excursion_title">Заголовок экскурсии</string>
    <string name="excursion_author">Автор экскурсии</string>
    <string name="excursion_description">Описание экскурсии</string>
    <string name="come_back">Вернуться</string>
    <string name="create">Создать</string>
    <string name="load">Загрузка</string>
    <string name="create_excursion">Создать экскурсию</string>
    <string name="user">Юзер</string>
    <string name="log_out">Выйти</string>
    <string name="lang_error">Используйте латинский или русский алфавит!</string>
    <string name="repeat_login">Повторите логин</string>
    <string name="pass_not_same">Пароли не совпадают</string>
    <string name="user_registered">Пользователь зарегистрирован</string>
    <string name="user_exists">Пользователь существует</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="shit_happens">Произошла ошибка</string>
    <string name="empty_desc">Заполните описание</string>
    <string name="empty_title">Введите название</string>
    <string name="create_success">Экскурсия создана успешно</string>
    <string name="author_eaten">Автор съеден</string>
    <string name="excursion_eaten">Экскурсия съедена</string>
    <string name="invalid_excursion">Экскурсия-бедолага</string>
    <string name="error_reg">Ошибка регистрации</string>
    <string name="profilelogo">ProfileLogo</string>
    <string name="logo">Лого</string>
    <string name="app_name">OpenWorld</string>
    <string name="error_favorite">Сначала авторизуйтесь</string>
    <string name="favorite"> Добавить\Удалить избранное </string>
    <string name="error_delete_excursion"> Необходимо быть владельцем экскурсии </string>
    <string name="search_hint">Найти экскурсию</string>
    <string name="my_exc_list">Мои экскурсии</string>
    <string name="add_to_fav">Добавить в избранное</string>
    <string name="delete_exc">Удалить экскурсию</string>
    <string name="edit_exc">Редактировать экскурсию</string>
    <string name="you_want">Вы хотите</string>
    <string name="or">или</string>
    <string name="reg_string_qm">Зарегестрироваться?</string>
    <string name="authorize">Войдите</string>
    <string name="open_your_world">Откройте свой мир</string>
    <string name="your_world">свой мир</string>
    <string name="pick_photo">Выбрать фото</string>
    <string name="photo">Фото</string>
    <string name="loading">Загружаем</string>
    <string name="enjoy_using_it">Приятного пользования!!!</string>
    <string name="please_register">Пожалуйста, зарегистрируйтесь</string>
    <string name="avatar">Аватарка</string>
    <string name="search">Поиск</string>
    <string name="poi">POI</string>
    <string name="poi_desc">POI_DESC</string>
    <string name="poi_address">POI_ADDRESS</string>
    <string name="make_path">Построить маршрут</string>
    <string name="smechno">Жена отправляет мужа-программиста в магазин: - Купи батон хлеба, если будут яйца - возьми десяток. Муж возвращается из магазина с десятью батонами. - Ты зачем столько хлеба купил? - Так ведь яйца были...</string>
    <string name="add_place">Добавить место</string>
    <string name="delete_place">Удалить точку</string>
    <string name="delete_photo">Удалить фото</string>
    <string name="empty_route">Маршрут пуст</string>
    <string name="empty_photos">Добавьте фото</string>
    <string name="rating_description">Рейтинг экскурсии</string>
    <string name="my_rating_description">Моя оценка</string>
    <string name="moderating_excursions">Модерация экскурсий</string>
    <string name="pend">На доработку</string>
    <string name="approve">Подтвердить</string>
    <string name="write_comment">Напишите комментарий</string>
    <string name="descript_problem">Опишите проблему</string>
    <string name="reject">Отклонить</string>
    <string name="focus_on_user">Фокус на юзера</string>
    <string name="add_tag_button">Добавить тэг</string>
    <string name="add_tag_string">Введите тэг</string>
    <string name="add_city_name_string">Введите название города</string>
    <string name="empty_city_name">Название города не заполненно</string>
    <string name="topic_string">Выберите тематику экскурсии</string>
    <string-array name="topics_filter">
        <item>Все тематики</item>
        <item>Другая</item>
        <item>Пешая</item>
        <item>Путешествие</item>
        <item>Позновательная</item>
    </string-array>
    <string-array name="topics">
        <item>Другая</item>
        <item>Пешая</item>
        <item>Путешествие</item>
        <item>Позновательная</item>
    </string-array>
    <string name="or_login_by">или войти через:</string>
    <string name="login_by_google">Войти через Google</string>
    <string name="login_by_email">Войти по Email</string>
    <string name="login_by_vk">Войти через VK</string>
    <string name="filter_by_tag_text">Фильтровать по тэгу</string>
    <string name="filter_by_rating_text">Фильтрация по рейтингу</string>
    <string name="filter_by_rating_value">(значение от 0 до 5)</string>
    <string name="filter_by_approved_at_text">Фильтрация по дате публикации</string>
    <string name="filter_by_approved_at_start">Начальная дата</string>
    <string name="filter_by_approved_at_end">Конечная дата</string>
    <string name="filter_by_duration_text">Фильтрация по продолжительности</string>
    <string name="filter_by_duration_start">min значение</string>
    <string name="filter_by_duration_end">max значение</string>
    <string name="filter_by_topic_text">Фильтрация по теме экскурсии</string>
    <string name="filter">Фильтровать</string>
    <string name="filter_by_city_text">Фильтрация по городу</string>
    <string name="filter_by_city_value">Название города</string>
    <string name="topic_in_excursion">Тема:</string>
    <string name="city_in_excursion">Город:</string>
    <string name="tags_in_excursion">Теги:</string>
    <string name="error_excursions">Ошибка загрузки экскурсий</string>
    <string name="cant_fetch_excursions">Не удалось загрузить экскурсии: </string>
    <string name="retry_fetch">Повторить загрузку</string>
    <string name="unknownerror">UnknownError</string>
    <string name="default_web_client_id">596243648831-n94ipknkjdbm2b5legjsdkc6fo15ghs0.apps.googleusercontent.com</string>
    <string name="excursionphoto">Фото экскурсии</string>
    <string name="filtration">Фильтрация</string>
    <string name="google">Войти через Google</string>
    <string name="edit_success">Экскурсия изменена</string>
    <string name="so_quiet_naaah">Тут так тихо…</string>
    <string name="login">Войти</string>
    <string name="unknown_user">Пользователя не существует</string>
    <string name="you_made_no_excursions">Вы не создали ни одной экскурсии</string>
    <string name="moderation_status">Статус модерации</string>
    <string name="rating_star">Звезда рейтинга</string>
    <string name="status">Статус</string>
    <string name="wait">Подождите</string>
    <string name="no_avatar">Выберите аватар</string>
    <string name="excursion_menu">Меню экскурсии</string>
    <string name="you_have_no_fav_exc">Вам не избрали ни одной экскурсии D:</string>
    <string name="come_to_list">К списку экскурсий</string>
    <string name="enter_placename">Введите название</string>
    <string name="unknown_place">Неизвестное место</string>
    <string name="enter_name">Подтвердить имя</string>
    <string name="end_route">Завершить маршрут</string>
    <string name="reg_success">Регистрация успешна!!!</string>
    <string name="short_password">Пароль должен быть не менее 8 символов!</string>
</resources>