<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="48dp"
    android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/logo2"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_app_v3" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/buttonAddAvatar"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:alpha="0.4"
            android:contentDescription="@string/avatar"
            android:src="@drawable/ic_add_avatar"
            app:layout_constraintEnd_toEndOf="@id/logo2"
            app:layout_constraintStart_toStartOf="@id/logo2"
            app:layout_constraintTop_toTopOf="@id/logo2"
            app:layout_constraintBottom_toBottomOf="@id/logo2"/>

        <Button
            android:id="@+id/butt_reg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/border_pattern_2"
            android:text="@string/reg_string"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/repeat_pass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/repeat_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/repeat_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_pass" />

        <EditText
            android:id="@+id/input_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_login" />

        <EditText
            android:id="@+id/input_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:hint="@string/login_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo2" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_marginTop="4dp"
            android:textSize="20sp"
            android:textColor="@color/blue"
            android:fontFamily="@font/app_font1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/butt_reg" />

    <Button
        android:id="@+id/buttonGoogleSignIn"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="4dp"
        android:text="@string/google"
        android:drawableStart="@drawable/ic_google"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        app:cornerRadius="8dp"
        app:iconGravity="textStart"
        app:iconSize="24dp"
        app:iconPadding="8dp"
        app:iconTint="@null"
        app:layout_constraintTop_toBottomOf="@id/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>