<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/errorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="?android:attr/windowBackground">

    <ImageView
        android:id="@+id/errorIcon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@android:drawable/ic_dialog_alert"
        android:contentDescription="@string/error_excursions"
        app:tint="@android:color/holo_red_dark" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cant_fetch_excursions"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/retryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_pattern_1"
        android:text="@string/retry_fetch"
        android:textColor="@color/blue"
        android:layout_marginTop="24dp" />
</LinearLayout>
