<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_margin="4dp"
    android:elevation="2dp"
    android:background="@drawable/border_pattern_8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/placeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/enterName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:importantForAutofill="auto"
            android:autofillHints="@string/unknown_place"
            android:ellipsize="end"
            android:inputType="text"
            android:maxLines="2"
            android:hint="@string/enter_placename"
            android:fontFamily="@font/app_font2"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <ImageButton
            android:id="@+id/approveName"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/enter_name"
            android:src="@drawable/approve"
            android:background="@android:color/transparent"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/deletePlace"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/delete_place"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_ex_del" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginHorizontal="4dp"
        android:alpha="0.75"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_pattern_7" />

</LinearLayout>