<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/notAuth"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_app_v3" />

    <TextView
        android:id="@+id/openText"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/open_your_world"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:gravity="center"
        android:fontFamily="@font/app_font2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />
    
    <Button
        android:id="@+id/open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_pattern_2"
        android:elevation="16dp"
        android:layout_marginHorizontal="72dp"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:fontFamily="@font/app_font2"
        app:layout_constraintTop_toBottomOf="@id/openText"
        />

</androidx.constraintlayout.widget.ConstraintLayout>