<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="36dp"
        android:paddingTop="36dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userPhoto"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:contentDescription="@string/avatar"
            android:src="@drawable/ic_app_v3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/userNickname"
            android:layout_width="180dp"
            android:layout_height="36dp"
            android:layout_marginStart="24dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:scrollHorizontally="false"
            android:text="@string/user"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:fontFamily="@font/app_font2"
            android:elevation="16dp"
            app:layout_constraintStart_toEndOf="@id/userPhoto"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttCreateExcursion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@drawable/border_pattern_6"
            android:text="@string/create_excursion"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:elevation="24dp"
            android:drawableStart="@drawable/ic_create_ex"
            android:paddingHorizontal="12dp"
            app:iconGravity="textStart"
            app:iconSize="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userPhoto" />

        <Button
            android:id="@+id/createdExcursionsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@drawable/border_pattern_6"
            android:text="@string/my_exc_list"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:elevation="24dp"
            android:drawableStart="@drawable/ic_ex_list"
            android:paddingHorizontal="12dp"
            app:iconGravity="textStart"
            app:iconSize="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttCreateExcursion" />

        <Button
            android:id="@+id/moderatingExcursions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@drawable/border_pattern_6"
            android:text="@string/moderating_excursions"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:elevation="24dp"
            android:drawableStart="@drawable/moderating_excursions"
            android:paddingHorizontal="12dp"
            app:iconGravity="textStart"
            app:iconSize="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createdExcursionsList" />

        <Button
            android:id="@+id/buttLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@drawable/border_pattern_6"
            android:text="@string/log_out"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:elevation="24dp"
            android:drawableStart="@drawable/ic_logout"
            android:paddingHorizontal="12dp"
            app:iconGravity="textStart"
            app:iconSize="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/moderatingExcursions" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>